<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Boutline</string>
    <string name="action_settings">Settings</string>
    <string name="schedule">Schedule</string>
    <string name="APP_ID">449682818488626</string>
    <string name="fbLogin">LOGIN WITH FACEBOOK</string>
    <string name="logoutbtn">Logout from Boutline</string>
    <string name="walkthrough0">Your sports assistant who answers all your questions and keeps you updated about the world of sports.</string>
    <string name="walkthrough1">Bo knows everything about sports and keeps track of your friends\' and your interests. You can talk to him like you talk to a friend.</string>
    <string name="walkthrough2">You can talk to Bo like you chat with your friends. In beta, You can ask him questions related to the EPL\'s schedule.  </string>
    <string name="walkthrough3">Don\'t forget to give suggestions and feedback. To give feedback, all you need to do is shake your phone.</string>
    <string name="meetbo">Meet Bo</string>
    <string name="theoracle">The Oracle</string>
    <string name="yourwingman">Your Wingman</string>
    <string name="talktous">Talk to us</string>
    <string name="football">Football</string>
    <string name="footballSubber">World Cup, EPL, Champions League etc.</string>
    <string name="cricket">Cricket</string>
    <string name="cricketSubber">Twenty 20, Test Matches, ODI etc.</string>
    <string name="tosnpp">By signing up for Boutline, you agree to the <u><![CDATA[<a href="http://www.boutline.com/tos">Terms of service</a>]]></u> and <u><![CDATA[<a href="http://www.boutline.com/privacy">Privacy Policy</a>]]></u>. </string>
    <string name="fbDisclaimer">We\'ll never post to your wall without permission.</string>
    <string name="whatshappening">What\'s happening?</string>
    <string name="posttweet">Post</string>
    <string name="dummy"></string>
    <string name="createbantergroup">Create</string>
    <string name="at"> at </string>
    <string name="moveon">Continue</string>
    <string name="charCount">140</string>
    <string name="chooseLiveMatch">Live Matches</string>
    <string name="hdrConversations">Banters</string>
    <string name="hdrNewBanter">Create your new group for bantering</string>
    <string name="givebantername">Give your group a name:</string>
    <string name="choosetourforbanter">Choose a tournament to banter about from the list below:</string>
    <string name="chooseSport">Favorite Sports</string>
    <string name="maniac">Maniac</string>
    <string name="chooseSportDesc">Follow sports to see tournaments and get better recommendations in the future</string>
    <string name="chooseTourDesc">Follow tournaments to get latest updates and to find out what people are talking about it.</string>
    <string name="chooseTournament">Follow Tournaments</string>
    <string name="noTours">Doh! The apocalypse is coming. There are no tournaments happening at this time.</string>
    <string name="liveMatches">Live Matches</string>
    <string name="upcomingMatches">Upcoming Matches</string>
    <string name="sayhello">Hello!</string>
    <string name="justnow">Just now</string>
    <string name="swipeleft">Swipe left to find out more. </string>
    <string name="welcomemessage">You are now a part of an elite community of sports fans. Here you can learn about, connect with and stay updated about your favorite sports and their fans. </string>
    <string name="lblLiveMatches">Live Matches</string>
    <string name="lblUpcomingMatches">Upcoming Matches</string>
    <string name="newmember">New Member? Sign up here.</string>
    <string name="forgotpassword">Problems Signing in?</string>
    <string name="favteam">Which is your favorite team?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="emailid">Email ID</string>
    <string name="login">Login to begin</string>
    <string name="signup">Sign up for awesomeness</string>
    <string name="entername">Enter your name here</string>
    <string name="alreadysigned">Already a member? Sign in here.</string>
    <string name="giveidentity">Tell us a bit about you</string>
    <string name="forgotpwdguide">Your password will be emailed to the email id you used to sign up for boutline.</string>
    <string name="title_activity_autocomplete">AutocompleteActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_multiautocomplete">MultiautocompleteActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
