<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.boutline.sports.MainActivity" >
    <item
        android:id="@+id/schedule"
        android:icon="@drawable/ic_calendar"
        android:showAsAction="ifRoom"
        android:title="@string/schedule"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/banter"
        android:icon="@drawable/ic_banter"
        android:showAsAction="ifRoom"
        android:title="@string/dummy"/>
     <item
        android:id="@+id/playpause"
        android:icon="@drawable/ic_pause"
        android:showAsAction="ifRoom"
        android:title="@string/dummy"/>

</menu>
