<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/white"
        >
        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/bobotsmall"
            android:scaleType="centerCrop"
            android:layout_marginTop="10dp"/>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/logo">
            <TextView
                android:id="@+id/boutline"
                android:text="@string/app_name"
                android:textColor="@color/darkgray"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/lblLogin"
                android:text="@string/login"
                android:textColor="@color/darkgray"
                android:layout_below="@id/boutline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                />
        </RelativeLayout>
    </RelativeLayout>

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginLeft="10dp"
        android:inputType="textNoSuggestions"
        android:layout_marginRight="10dp"
        android:hint="@string/username"
        android:padding="25dp"
        android:background="@drawable/edittext_style"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/txtUsername"
        android:background="#dcdcdc"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtUsername"
        android:layout_marginLeft="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginRight="10dp"
        android:padding="25dp"
        android:background="@drawable/edittext_style"
        android:layout_marginTop="5dp"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/txtPassword"
        android:background="#dcdcdc"/>

    <TextView
        android:id="@+id/problems"
        android:text="@string/forgotpassword"
        android:textColor="@color/darkgray"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:gravity="center"
        android:layout_below="@id/txtPassword"
        />

    <TextView
        android:id="@+id/lblSignup"
        android:text="@string/newmember"
        android:textColor="@color/darkgray"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:gravity="center"
        android:layout_below="@id/problems"
        />

    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/blue"
        android:layout_alignParentBottom="true"
        android:id="@+id/LoginBtn"
        android:contentDescription="@string/dummy"
        android:src="@drawable/login"
        />

</RelativeLayout>