<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3e3e7">
    
    <TextView
        android:id="@+id/lblChooseSport"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/chooseSport"
        android:paddingTop="40dp"
        android:textSize="28sp"
        android:textColor="@color/darkgray"
        />

    <TextView
        android:id="@+id/lblChooseSportDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/chooseSportDesc"
        android:layout_below="@id/lblChooseSport"
        android:padding="20dp"
        android:textSize="16sp"
        android:textColor="@color/darkgray"
        />

    <Button
        android:id="@+id/btnSubmitSportsSelection"
        android:text="@string/moveon"
        android:background="@color/blue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        />

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gvSports"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:stretchMode="columnWidth"
        android:gravity="bottom"
        android:layout_above="@id/btnSubmitSportsSelection"
        android:layout_below="@id/lblChooseSportDesc"
        />

</RelativeLayout>

