<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <LinearLayout
        android:id="@+id/pageindicator"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="15dp">
        <ImageView
            android:id="@+id/imgInactivePage0"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:src="@drawable/active_page"
            android:contentDescription="@string/app_name"
            android:padding="2dp"
            />
        <ImageView
            android:id="@+id/imgActivePage"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:src="@drawable/inactive_page"
            android:contentDescription="@string/app_name"
            android:padding="2dp"
            />
        <ImageView
            android:id="@+id/imgInactivePage"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:src="@drawable/inactive_page"
            android:contentDescription="@string/app_name"
            android:padding="2dp"
            />
        <ImageView
            android:id="@+id/imgInactivePage2"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:src="@drawable/inactive_page"
            android:contentDescription="@string/app_name"
            android:padding="2dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/swiper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/swipeleft"
        android:layout_above="@id/pageindicator"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:textColor="#999999"
        android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/lblWalkthrough0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/walkthrough0"
        android:layout_above="@id/swiper"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:textColor="#999999"
        android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/hdrWalkthrough0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/lblWalkthrough0"
        android:text="@string/meetbo"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"/>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        android:background="#ffffff"
        android:layout_above="@id/hdrWalkthrough0">
        <ImageView
            android:id="@+id/imgWalkthrough0"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:src="@drawable/bluebot"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"/>
    </LinearLayout>

</RelativeLayout>